# Agribot_AI

./: .env  README  README.md  app.py  pyproject.toml  run_chatbot.py
ai_agent/src/agents/: crop_health_chatbot_agentV6.py  crop_health_model_agentV6.py
data/: hu_2022_2025_sunflower_10d_fields_Budapest.csv  zeroshot_ground_truth_with_coords.parquet
machine_learning/src/feat/Crop_Health_Model_V6/: evaluate_growing_seasons.py  evaluate_zeroshot.py  train_v6_gru.py
machine_learning/src/feat/Crop_Health_Model_V6/training_results/: SET1_growing_season_predictions.json  SET2_non_growing_season_predictions.json  gru_data_split_v6.0.json  model_summary_v6.0.json
machine_learning/src/feat/Crop_Health_Model_V6/utils/: multivar_scaler_v6.0.pkl
pre-processing_notebooks/: Copy_of_merge_override_final_lstm_dataset_cleaned.ipynb  With_Coordinates_pre_processing_adding__new_field_id.ipynb  merge_override_final_lstm_dataset_cleaned.ipynb  pre_processing_adding__new_field_id.ipynb
scripts/: merge_datasets.py
