[tool.poetry]
name = "crop-health"
version = "1.0.0"
description = "AI-driven crop health monitoring system."
authors = ["Samantha Lee"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
opencv-python = "^4.9.0"
faiss-cpu = "^1.12.0"
sentence-transformers = "^3.1"
python-dotenv = "^1.0.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.27.3"
# App Dependencies
streamlit = "^1.36.0"
streamlit-folium = "^0.20.0"
folium = "^0.16.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
fastparquet = "^2024.2.0" 

[tool.poetry.group.backend.dependencies]
fastapi = ">=0.116.2"
uvicorn = { version = "0.35.0", extras = ["standard"] }
pydantic = "2.11.7"
pydantic-settings = "2.5.2"
sqlalchemy = "2.0.43"
alembic = "1.13.3"
python-multipart = "0.0.20"
orjson = "3.11.3"
PyJWT = "2.10.1"
cryptography = ">=44.0.1,<45"
passlib = { version = "1.7.4", extras = ["bcrypt"] }
loguru = "0.7.3"
fastapi-pagination = "0.14.1"
geojson = "3.2.0"
pandas = "2.2.3"
pyarrow = "16.1.0"
geopandas = "1.1.1"
shapely = "2.0.6"
pyproj = "3.6.1"
rtree = "1.4.1"
pyogrio = "0.11.1"

[tool.poetry.group.data_engineering.dependencies]
numpy = "*" 
pandas = "2.2.3"
xarray = ">=2024.7.0,<2025.0"
dask = "2024.6.1"
pyarrow = "16.1.0"
huggingface_hub = ">=0.23"
fsspec = "2024.6.1"
s3fs = "2024.6.1"
gcsfs = "2024.6.1"
webdav4 = "0.10.0"
rasterio = "1.4.3"
rioxarray = "0.19.0"
stackstac = "0.5.1"
pystac-client = "0.8.6"
planetary-computer = "^1.0.0"
pystac = "^1.10"
cdsapi = "0.7.6"
cfgrib = "0.9.15.0"
eccodes = "2.43.0"
netCDF4 = "1.7.2"
h5netcdf = "1.3.0"
h5py = "3.11.0"
sqlalchemy = "2.0.43"
sqlite-utils = "3.38"
aiosqlite = "0.21.0"
pooch = "1.8.2"
tqdm = "4.66.5"
loguru = "0.7.3"
typer = "0.12.5"
datasets = "^2.20.0"

[tool.poetry.group.ai_agent.dependencies]
langgraph = "0.2.76"
langchain-core = "0.3.76"
httpx = "^0.27.0"
pandas = "2.2.3"
groq = "^0.33.0"
xgboost = "^3.1.0"
pyarrow = "16.1.0"

[tool.poetry.group.machine_learning.dependencies]
numpy = "*" 
xgboost = "^3.1.0"
matplotlib = "^3.10.7"
pyarrow = "16.1.0"
duckdb = "^1.4.1"
huggingface_hub = ">=0.23"
groq = "^0.33.0"
pandas = "2.2.3"
geopandas = "1.1.1"
datasets = "^2.20.0"
tensorflow = {version="*", extras=["and-cuda"]}
scikit-learn = "*"
seaborn = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
black = "24.8.0"
isort = "5.13.2"
flake8 = "7.0.0"
mypy = "1.10.0"
pylint = "3.2.6"
bandit = "1.7.9"
pre-commit = "3.7.1"
pytest = "8.2.2"
pytest-xdist = "3.6.1"
pytest-sugar = "1.0.0"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"